Added text to identity chart,and styles modified

--- a/index.html
+++ b/index.html
@@ -110,11 +110,12 @@
                         <header class="chart-header">
                             <h3>Identity</h3>
                         </header>
-                        <div class="chart-content">
+                        <div class="chart-content text-content">
                             <div id="identity" class="graph">
                                 <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();"><span style = "color:#4682B4; float:left;">Reset</span></a>
                             </div>
                             <p>Most of the characters have either secret or public identity, and there is a marginal difference between them.</p>
+                            <p>Click on a slice to focus on a particular identity and see how other graphs are filtering data.</p>
                         </div>
                     </div>
                 </div>
@@ -132,8 +133,8 @@
                                 <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();"><span style = "color:#4682B4; float:left;">Reset</span></a>
                             </div>
 
-                            <p>When comparing the alignment with gender, female characters have the most numer of good alignment.</p>
-                            <p>There is just one transgender character, which is in bad alignment.</p>
+                            <p>When comparing the alignment with gender, female characters have the most numer of good alignment.
+                            There is just one transgender character, which is in bad alignment.</p>
 
                         </div>
                     </div>
@@ -156,7 +157,7 @@
                         </header>
                         <div class="chart-content">
                             <div id="appearance"></div>
-                            <p>The chart displays the name, number of apperances of the character and also the year of the first appearance in a comic book.</p>
+                            <p>The chart displays the name, number of apperances of the character and also the year of the first appearance in a comic book. Hover on the circles to see the this!</p>
                         </div>
                     </div>
                 </div>
@@ -168,7 +169,7 @@
                         <header class="chart-header">
                             <h3> Alive</h3>
                         </header>
-                        <div class="chart-content alive-content">
+                        <div class="chart-content text-content">
                             <div id="bar-alive" class="graph">
                                 <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();"><span style = "color:#4682B4; float:left;">Reset</span></a>
                             </div>
