Unwanted comments removed

--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
                     <p>This information can access again when you click on the information icon on the top rightside.</p>
                 </div>
                 <div class="modal-footer">
-
                     <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-
                 </div>
             </div>
         </div>
@@ -67,7 +65,6 @@
                     <a href="#" class="title">Comic Character Dashboard</a>
                     <div id="reset-filters">
                         <div class="reset">
-                            <!-- <a href="javascript:dc.filterAll(); dc.renderAll();">Reset All</a>-->
                             <a href="javascript:dc.filterAll(); dc.renderAll();"><i class="fas fa-redo-alt" title = "Reset All"></i></a>
                         </div>
                         <div class="info-icon">
@@ -128,14 +125,11 @@
                             <h3>Alignment</h3>
                         </header>
                         <div class="chart-content">
-
                             <div id="bar-alignment" class="graph">
                                 <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();"><span style = "color:#4682B4; float:left;">Reset</span></a>
                             </div>
-
                             <p>When comparing the alignment with gender, female characters have the most numer of good alignment.
                             There is just one transgender character, which is in bad alignment.</p>
-
                         </div>
                     </div>
                 </div>
@@ -205,7 +199,7 @@
 
                 <!-- Hair Color -->
 
-                <div class="col-xs-12 col-md-6 pie-height">
+                <div class="col-xs-12 col-md-6">
                     <div class="content-wrapper">
                         <header class="chart-header">
                             <h3>Hair Color</h3>
