--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         </header>
                         <div class="chart-content">
                             <div id="appearance"></div>
-                            <p>The chart displays the name, number of apperances of the character and also the year of the first appearance in a comic book. Hover on the circles to see the this!</p>
+                            <p>The chart displays the name, number of apperances of the character and also the year of the first appearance in a comic book. Hover on the circles to see this!</p>
                         </div>
                     </div>
                 </div>
